<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greed</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="button_score">Score</string>
    <string name="score">Score:</string>
    <string name="total_score">Total score:</string>
    <string name="throw_">Throw</string>
    <string name="try_again">Try Again</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="unknown">-</string>
    <string name="not_enough_score">Not enough score, round ended!</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="congratulations">Congratulations - you are the best!</string>
    <string name="btn_go_back">Go back!</string>

</resources>
